# networking_tool

./: README.md  app.py  mkdocs.yml
.github/workflows/: test.yml
apps/collector/: README.md  pyproject.toml
apps/collector/src/collector/: __init__.py  __main__.py  config.py  extractors.py  filters.py
apps/collector/src/collector/sources/: __init__.py  crunchbase.py  sec.py
apps/collector/src/collector/storage/: __init__.py
configs/: secrets.template.env
configs/dev/: collector.yaml
configs/prod/: collector.yaml
docker/: collector.Dockerfile
docs/: architecture.md
docs/architecture/: company_identification.md
docs/components/: collector.md
libs/common/: pyproject.toml
libs/common/src/common/: __init__.py  logging.py  retry.py  types.py
scripts/: bootstrap_db.sh  demo_company_identification.py
static/: style.css
templates/: index.html
tests/collector/: test_config.py  test_extractors.py  test_filters.py
