[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "common"
version = "0.1.0"
description = "Common utilities for AutoOutreach"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.26.0",
    "tenacity>=8.0.1",
    "pydantic>=1.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.5b2",
    "isort>=5.9.0",
    "mypy>=0.910",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 